<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.example.sarah.prospectsproject.controllers.activities.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="195dp"
            android:layout_height="154dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/group" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:drawablePadding="5dp"
                android:hint="@string/text_user_name"
                android:maxLength="20"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrayDot"
                android:textSize="15sp"
                android:inputType="textEmailAddress" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:drawablePadding="5dp"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrayDot"
                android:textSize="15sp" />

        </android.support.v7.widget.CardView>

        <CheckBox
            android:id="@+id/checkBox_remember"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorLoginButton"
            android:text="@string/text_keep"
            android:textColor="@color/colorLoginButton"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />
        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorLoginButton"
            android:enabled="true"
            android:padding="15dp"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />


    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
